--- a/templates/sub5.html
+++ b/templates/sub5.html
@@ -72,9 +72,9 @@
             top: 29px;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             border-radius: 50px;
-            background-image: url('https://cdn.pixabay.com/photo/2023/04/03/03/20/plant-7895897_1280.jpg');
+            background-image: url('https://ca.slack-edge.com/T043597JK8V-U053QSM8MT4-e435cca492ea-512');
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: center; 
         }
 
         .address {
@@ -182,6 +182,7 @@
             content: "+ ";
             font-family: monospace;
             font-size: 16px;
+            font-weight: bolder;
         }
 
         details[open] summary::marker {
@@ -302,11 +303,12 @@
             <!-- 각자 상징 이모티콘으로 바꾸시면 될 듯함 -->
             <text class="imoge">🐶</text>
         </div>
-        <div class="photo"></div>
+        <!-- 사진은 .photo에서 백그라운드 값 바꾸시면 돼요 -->
+        <div class="photo"></div> 
         <!-- 주소는 하이퍼링크 입니다 -->
-        <a class="address" href="https://www.naver.com/">https://www.naver.com/</a>
+        <a class="address" href="https://velog.io/@hoy503007">https://velog.io/@hoy503007</a>
         <div>
-            <text class="name">샘플</text>
+            <text class="name">임수영</text>
         </div>
         <div id="test" class="about_me_area">
             <text class="about_me_text">자기소개</text>
@@ -317,23 +319,24 @@
             <div class="text">
                 <details>
                     <summary>사용할 수 있는 언어</summary>
-                    <li>Java, Spring, 각자 사용하실 수 있는 것들 ect...</p>
+                    <li>Java👍, Spring✨</li>
                 </details>
 
                 <details>
                     <summary>자신의 장점</summary>
-                    <li>여러개 쓰고 싶다면</li>
-                    <li>이렇게 하면 됩니당</li>
+                    <li>끈기가 있다.</li>
+                    <li>같은 화면을 계속 봐도 지루해 하지 않음(코딩특화)</li>
                 </details>
 
                 <details>
                     <summary>나의 MBTI</summary>
-                    <li>내부에 넣을 내용을 입력해주세요</li>
+                    <li>ISTP</li>
                 </details>
 
                 <details>
                     <summary>TMI</summary>
-                    <li>내부에 넣을 내용을 입력해주세요</li>
+                    <li>강아지를 키우고 있습니다.</li>
+                    <li>회의할 때마다 짖어대서 팀원분들께 너무 죄송...</li>
                 </details>
             </div>
         </div>
